    o #992174 by dereine: Add missing field handler aggregator_xss in the views.info file.
    o by dereine: Fix fatal error in the field term_node_tid handler.
    o #994856 by dereine: Replace views dependecy with ctools... again.
    o by dereine: Replace _fake_instance in field field handler with a ctools helper function.
    o #996634 by das-peter: Add missing rel to option_definition of the field handler.
    o #610418 by joachim: Add handler descriptions to handler edit forms.
    o #368687 by dereine: Allow a relationship from node revision to master node.
    o #759082 by dereine: Prevent invalid argument warning with no relationships.
    o #946368 by dereine: User argument default ignoring node author checkbox in some cases.
    o #867636 by chromix: Give jump menu an option to set default value to current path.
    o #997772 by dereine: Fix node_view_analyze by using dbtng and d7 role_permission database schema.
    o #998278 by dereine: Update field.views.inc based on #986992.
    o #998400 by das-peter: Use vocabulary in "term name converted to term id".
    o #785036 by dereine and bojanz: Properly validate display IDs.
    o #958312 by tim.plunkett: Exports could have extraneous whitespace when exported from other modules like features.
    o #927270 by Cyberwolf: Allow the "options callback" for the in_operator filter handler to also have an "options argument" in the definition.
    o #497936: Profile fields with dashes in their names cause bad queries.
    o #608926 by Longwave: Remove unused theme("nodate") functionality.
    o #993002 by alex_b, dereine: Fix notice in views_plugin_display_page.inc.
    o #1000044 by pivica: Fix notice for element_type in some field handlers.
    o #984390 by yhahn: Fix full pager variables.
    o #972620 by dereine: Add an administrative title field for all handlers to make it more possible to distinguish similar fields from each other in the UI.
