@@ -9,11 +9,11 @@ class viewsModuleTest extends ViewsSqlTest {
       'group' => 'Views',
     );
   }
-  
+
   public function setUp() {
     parent::setUp();
   }
-  
+
   public function test_views_trim_text() {
     // Test unicode, @see http://drupal.org/node/513396#comment-2839416
     $text = array(
@@ -58,12 +58,22 @@ class viewsModuleTest extends ViewsSqlTest {
       'сд асд',
       'асд асд',
     );
-    
+
     foreach ($text as $key => $line) {
       $result_text = views_trim_text($alter, $line);
-      debug($result_text);
-      debug($expect[$key]);
       $this->assertEqual($result_text, $expect[$key]);
     }
+  }
+  
+  /**
+   * Tests the dynamic includes of templates via module feature.
+   */
+  function testModuleTemplates() {
+    $views_status = variable_get('views_defaults', array());
+    $views_status['frontpage'] = FALSE; // false is enabled
+    variable_set('views_defaults', $views_status);
+
+    $registry = theme_get_registry();
+    $this->assertTrue(isset($registry['views_view__frontpage']));
   }
 }
