@@ -19,6 +19,7 @@ function views_test_permission() {
 function views_test_views_api() {
   return array(
     'api' => '3.0-alpha1',
+    'template path' => drupal_get_path('module', 'views_test') . '/templates',
   );
 }
 
