@@ -35,8 +35,7 @@ files[] = handlers/views_handler_filter_date.inc
 files[] = handlers/views_handler_filter_equality.inc
 files[] = handlers/views_handler_filter_in_operator.inc
 files[] = handlers/views_handler_filter_many_to_one.inc
-files[] = handlers/views_handler_filter_numeric.inc
-files[] = handlers/views_handler_filter_string.inc
+files[] = handlers/views_handler_filter_numeric.inc files[] = handlers/views_handler_filter_string.inc
 files[] = handlers/views_handler_relationship.inc
 files[] = handlers/views_handler_sort.inc
 files[] = handlers/views_handler_sort_group_by_numeric.inc
@@ -300,6 +299,7 @@ files[] = tests/views_exposed_form.test
 files[] = tests/views_glossary.test
 files[] = tests/views_groupby.test
 files[] = tests/views_handlers.test
+files[] = tests/views_module.test
 files[] = tests/views_pager.test
 files[] = tests/views_plugin_localization_test.inc
 files[] = tests/views_translatable.test
